--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "NAME",
+	"name": "Practice",
 	"version": "1.0.0",
-	"description": "description",
+	"description": "30ый урок по изучению JS, практика",
 	"author": "VirtoOZ",
 	"private": true,
 	"license": "ISC",
